--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,11 @@
   <div class="container">
     <h1>Modern JavaScript</h1>
     <p class="fira">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non ps, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+    <i class="fab fa-apple"></i>
+    <i class="fab fa-android"></i>
+    <i class="fab fa-windows"></i>
     
+    <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
   </div>
 
   
