--- a/app/DOM.html
+++ b/app/DOM.html
@@ -5,11 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern JavaScript</title>
-  <style>
-    li.collection-item {
-  background-color: rgb(30, 86, 150) !important;
-}
-  </style>
 </head>
 <body>
   <div class="container">
@@ -68,7 +63,7 @@
                   </a>
                 </li>
               </ul>
-              <a class="clear-tasks btn black" href="#">Clear Tasks</a>
+              <a class="clear-tasks btn black" href="">Clear Tasks</a>
             </div>
           </div>
         </div>
@@ -80,6 +75,6 @@
 
   
 
-<!-- <script src="../dist/bundle.js"></script>  -->
+<script src="bundle.js"></script> 
 </body>
 </html>
