--- a/app/index.html
+++ b/app/index.html
@@ -5,81 +5,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern JavaScript</title>
-  <style>
-    li.collection-item {
-  background-color: rgb(30, 86, 150) !important;
-}
-  </style>
+   
 </head>
 <body>
-  <div class="container">
-    <h1>Modern JavaScript</h1>
-    <p class="fira">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non ps, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <i class="fab fa-apple"></i>
-    <i class="fab fa-android"></i>
-    <i class="fab fa-windows"></i>
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <div id="main" class="card">
-            <div class="card-content">
-              <span class="card-title">Task List</span>
-              <div class="row">
-                <form id="task-form">
-                  <div class="input-field col s12">
-                    <input type="text" name="task" id="task" value="Walk the dog">
-                    <label for="task">New Task</label>
-                  </div>
-              </div>
-              <input type="submit" value="Add Task" class="btn">
-              </form>
+   <div class="container">
+     <div class="row">
+       <div class="col s12">
+         <div id="main" class="card">
+           <div class="card-content">
+             <span class="card-title">Task List</span>
+             <div class="row">
+               <form action="" id="task-form">
+                 <div class="input-field col s12">
+                   <input type="text" name="task" id="task">
+                   <label for="task">New Task</label>
+                 </div>
+                 <input type="submit" value="Add Task">
+               </form>
+             </div>
+           </div> <!-- card-content -->
+           <div class="card-action">
+             <h5 id="task-title">Tasks</h5>
+             <div class="input-field col s12">
+              <input type="text" name="filter" id="filter">
+              <label for="task">Filter Task</label>
             </div>
-            <div class="card-action">
-              <h5 id="task-title">Tasks</h5>
-              <ul class="collection">
-                <li class="collection-item">
-                  List Item
-                  <a href="#" class="delete-item secondary-content">
-                    <i class="fas fa-times"></i>
-                  </a>
-                </li> 
-                <li class="collection-item">
-                  List Item
-                  <a href="#" class="delete-item secondary-content">
-                    <i class="fas fa-times"></i>
-                  </a>
-                </li> 
-                <li class="collection-item">
-                  List Item
-                  <a href="#" class="delete-item secondary-content">
-                    <i class="fas fa-times"></i>
-                  </a>
-                </li>
-                <li class="collection-item">
-                  List Item
-                  <a href="#" class="delete-item secondary-content">
-                    <i class="fas fa-times"></i>
-                  </a>
-                </li>
-                <li class="collection-item">
-                  List Item
-                  <a href="#" class="delete-item secondary-content">
-                    <i class="fas fa-times"></i>
-                  </a>
-                </li>
-              </ul>
-              <a class="clear-tasks btn black" href="#">Clear Tasks</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
-  </div>
-
+            <ul class="collection"></ul>
+            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
+           </div> <!-- card-content -->
+         </div>
+       </div>
+     </div>
+   </div>
   
 
-<!-- <script src="../dist/bundle.js"></script>  -->
+
 </body>
 </html>
