--- a/app/index.html
+++ b/app/index.html
@@ -6,37 +6,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern JavaScript</title>
    
+ 
+  <style>
+    .success, .error {
+      color: white;
+      padding: 5px;
+      margin: 5px 0 15px 0;
+    }
+
+    .success {
+      background: green;
+    }
+
+    .error {
+      background: red;
+    }
+  </style>
+  <title>Book List</title>
 </head>
 <body>
-   <div class="container">
-     <div class="row">
-       <div class="col s12">
-         <div id="main" class="card">
-           <div class="card-content">
-             <span class="card-title">Task List</span>
-             <div class="row">
-               <form action="" id="task-form">
-                 <div class="input-field col s12">
-                   <input type="text" name="task" id="task">
-                   <label for="task">New Task</label>
-                 </div>
-                 <input type="submit" value="Add Task">
-               </form>
-             </div>
-           </div> <!-- card-content -->
-           <div class="card-action">
-             <h5 id="task-title">Tasks</h5>
-             <div class="input-field col s12">
-              <input type="text" name="filter" id="filter">
-              <label for="task">Filter Task</label>
-            </div>
-            <ul class="collection"></ul>
-            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
-           </div> <!-- card-content -->
-         </div>
-       </div>
-     </div>
-   </div>
+  <div class="container">
+    <h1>Add Book</h1>
+    <form id="book-form">
+      <div>
+        <label for="title">Title</label>
+        <input type="text" id="title" class="u-full-width">
+      </div>
+      <div>
+        <label for="author">Author</label>
+        <input type="text" id="author" class="u-full-width">
+      </div>
+      <div>
+        <label for="isbn">ISBN#</label>
+        <input type="text" id="isbn" class="u-full-width">
+      </div>
+      <div>
+        <input type="submit" value="Submit" class="u-full-width">
+      </div>
+    </form>
+    <table class="u-full-width">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>ISBN</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody id="book-list"></tbody>
+    </table>
+  </div>
   
 
 
