high order functions

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
         <input type="submit" value="Submit" class="u-full-width">
       </div>
     </form>
-    
+
     <table class="u-full-width">
       <thead>
         <tr>
@@ -59,7 +59,7 @@
     </table>
   </div>
   
-
+<button class="button">Get Data</button>
 
 </body>
 </html>
