--- a/app/index.html
+++ b/app/index.html
@@ -22,44 +22,20 @@
       background: red;
     }
   </style>
-  <title>Book List</title>
+  <title>JS</title>
 </head>
 <body>
+  <h1 class="heading">Modern JavaScript</h1>
   <div class="container">
-    <h1>Add Book</h1>
-   
-    <form id="book-form">
-      <div>
-        <label for="title">Title</label>
-        <input type="text" id="title" class="u-full-width">
-      </div>
-      <div>
-        <label for="author">Author</label>
-        <input type="text" id="author" class="u-full-width">
-      </div>
-      <div>
-        <label for="isbn">ISBN#</label>
-        <input type="text" id="isbn" class="u-full-width">
-      </div>
-      <div>
-        <input type="submit" value="Submit" class="u-full-width">
-      </div>
-    </form>
+    
+    <button id="button1">Get Customer</button>
+    <button id="button2">Get Customers</button>
 
-    <table class="u-full-width">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Author</th>
-          <th>ISBN</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody id="book-list"></tbody>
-    </table>
-  </div>
-  
-<button class="button">Get Data</button>
+    <h1>Customer</h1>
+      <div id="customer"></div>
+    <h1>Customers</h1>
+      <div id="customers"></div>
 
+  </div> <!-- container -->
 </body>
 </html>
