--- a/app/index.html
+++ b/app/index.html
@@ -26,16 +26,26 @@
 </head>
 <body>
   <h1 class="heading">Modern JavaScript</h1>
-  <div class="container">
-    
-    <button id="button1">Get Customer</button>
-    <button id="button2">Get Customers</button>
 
-    <h1>Customer</h1>
-      <div id="customer"></div>
-    <h1>Customers</h1>
-      <div id="customers"></div>
+  <h1 class="fira">Chuck Norris Jokes Generator</h1>
+  <div class="container">
+
+    <form>
+      <div class="row">
+        <div class="input-field col s6">
+          <label for="number">Number of jokes</label>
+          <input type="number" id="number">
+        </div>
+      </div>
+       
+      <div>
+        <button class="get-jokes waves-effect waves-light btn">Get Jokes</button>
+      </div>
+    </form>
+    <ul class="jokes"></ul>
 
   </div> <!-- container -->
+
+  
 </body>
 </html>
